[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemy/EnemySail.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/Enemy1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=3]
[ext_resource path="res://Sprites/ShipDirectionArrow.png" type="Texture" id=4]

[node name="NPC" type="Node2D"]
visible = false
script = ExtResource( 3 )

[node name="Ship" type="KinematicBody2D" parent="."]

[node name="Hull" type="Sprite" parent="Ship"]
texture = ExtResource( 2 )
offset = Vector2( 25, 0 )

[node name="Collision" type="CollisionPolygon2D" parent="Ship"]
position = Vector2( 1, 1 )
rotation = 1.5708
polygon = PoolVector2Array( 22, -7.00008, 30.9999, -20.0001, 35.9999, -29.0001, 37.9998, -48.0001, 31.9998, -63.0001, 23.9997, -70.0001, -1.0003, -83, -30.0002, -65.9999, -41.0002, -43.9999, -36.0001, -22.9999, -24, -8.99991, -24, 8.6844e-05, -24, 9.00009, -32.9999, 26.0001, -27.9999, 36.0001, 20.0001, 36.9999, 31.0001, 31.9999, 23, 8.99992 )

[node name="Area2D" type="Area2D" parent="Ship"]

[node name="Collision" type="CollisionPolygon2D" parent="Ship/Area2D"]
position = Vector2( 1, 1 )
rotation = 1.5708
polygon = PoolVector2Array( 22, -7.00008, 30.9999, -20.0001, 35.9999, -29.0001, 37.9998, -48.0001, 31.9998, -63.0001, 23.9997, -70.0001, -1.0003, -83, -30.0002, -65.9999, -41.0002, -43.9999, -36.0001, -22.9999, -24, -8.99991, -24, 8.6844e-05, -24, 9.00009, -32.9999, 26.0001, -27.9999, 36.0001, 20.0001, 36.9999, 31.0001, 31.9999, 23, 8.99992 )

[node name="Sail" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 25, 0 )

[node name="DirectionArrow" type="Sprite" parent="."]
rotation = -2.40332
texture = ExtResource( 4 )
offset = Vector2( 25, 0 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Ship/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Ship/Area2D" to="." method="_on_Area2D_body_entered"]
